stubbs for class

--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="ExampleController.js"></script>
 </head>
 <body>
-    test:{{test}}
+
+<div ee-responsive-class="{red:'visible-xs',green:'hidden-md'}">test:{{test}}</div>
 </body>
 </html>
