added responsive if directive

--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 
-<div ee-responsive-class="{red:'visible-xs',green:'hidden-md'}">test:{{test}}</div>
+<div ee-responsive-if="'visible-sm visible-xs'">test2:{{test}}</div>
 </body>
 </html>
