--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <title>angular-responsive</title>
     <link rel="stylesheet" type="text/css" href="example.css">
     <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="../build/angular-responsive-0.0.1.js"></script>
+    <script type="text/javascript" src="../build/angular-responsive.js"></script>
     <script type="text/javascript" src="DefaultController.js"></script>
     <script type="text/javascript" src="ExampleController.js"></script>
 </head>
