--- a/example/index.html
+++ b/example/index.html
@@ -11,9 +11,8 @@
 </head>
 <body ng-controller="ExampleController">
 <div class="mainContent">
-    <div ng-include="'includes/header.html'"></div>
-    <div ng-include="'includes/responsiveIf/responsiveIf.html'"></div>
-    <div ng-include="'includes/ngIf/ngIf.html'"></div>
+    <div ng-include="'includes/header.tpl.html'"></div>
+    <div ng-include="'includes/if.tpl.html'"></div>
 </div>
 <div class="number">{{width}}</div>
 </body>
