--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,7 @@
 <div class="mainContent">
     <div ng-include="'includes/header.tpl.html'"></div>
     <div ng-include="'includes/if.tpl.html'"></div>
+    <div ng-include="'includes/ngInclude/ngInclude.tpl.html'"></div>
 </div>
 <div class="number">{{width}}</div>
 </body>
